fixed header & fixed course img not aligning

--- a/assets/style/images.css
+++ b/assets/style/images.css
@@ -149,7 +149,7 @@
         background-color: red;
     }
 
-    .languages-logos:first-child abbr:first-child img {
+    .course-card:first-child .languages-logos abbr:nth-of-type(2) {
         margin-left: 1rem;
     }
 
